<resources>
    <string name="app_name">Ticker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sign In</string>
    <string name="nav_header_subtitle">Sign in with Wechat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_event">Event</string>
    <string name="menu_label">Label</string>
    <string name="menu_widgets">Widgets</string>
    <string name="menu_color">Color</string>
    <string name="menu_premium">Premium</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help and Feedback</string>
    <string name="title_activity_test">Test</string>

</resources>
