<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_label"
            android:icon="@drawable/label"
            android:title="@string/menu_label" />
        <item
            android:id="@+id/nav_widgets"
            android:icon="@drawable/ic_widgets"
            android:title="@string/menu_widgets" />
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/ic_color_lens"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_stars"
            android:title="@string/menu_premium" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_warning"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />

    </group>

</menu>
